# Omnivert

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PHASES.md  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app.py  build.bat  pyproject.toml  requirements-app.txt  run.bat
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependency-review.yml  engine-update.yml  engine-watch.yml  release.yml  stale.yml  summary.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CapabilitiesDialog.tsx  ConvertPanel.tsx  FileDropzone.tsx  Header.tsx  Markdown.tsx  OptionsPanel.tsx  PluginsDialog.tsx  ResultCard.tsx  SettingsDialog.tsx  SourceIcon.tsx  ThemeToggle.tsx  UpdateSection.tsx  UpdatesDialog.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  sonner.tsx  switch.tsx  tabs.tsx
frontend/src/lib/: api.ts  theme.tsx  types.ts
packaging/: app.spec  freeze_entry.py  generate_logo_assets.py  installer.iss
scripts/: bump_app_version.py  check_latest_engine.py  compose_release_notes.py  copy_web_assets.py  pin_engine_version.py  set_build_repo.py
src/omnivert/: __init__.py  __main__.py  app_updates.py  app_version.py  build_info.py  capabilities.py  claude_shim.py  conversion.py  gh.py  installer_update.py  jobs.py  launcher.py  main.py  plugins.py  schemas.py  settings.py  updates.py  url_guard.py  window_bridge.py
tests/: engine_smoke.py
