[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnivert"
dynamic = ["version"]
description = "A Windows desktop GUI for Omnivert document conversion."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "BrandonDry" }]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "trio",
  "pywebview",
  "markitdown[pptx,docx,xlsx,xls,pdf,outlook,az-doc-intel,az-content-understanding,audio-transcription]==0.1.6",
]

[project.optional-dependencies]
build = [
  "build",
  "pyinstaller",
]
test = [
  "pytest",
]

[project.scripts]
omnivert = "omnivert.launcher:main"

[tool.setuptools.dynamic]
version = {attr = "omnivert.app_version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omnivert = ["web/**"]
