[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnivert"
dynamic = ["version"]
description = "A Windows desktop GUI for Omnivert document conversion."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "BrandonDry" }]
keywords = [
  "markdown",
  "converter",
  "document-conversion",
  "markitdown",
  "pdf",
  "docx",
  "pptx",
  "xlsx",
  "desktop",
  "gui",
  "llm",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "trio",
  "pywebview",
  "markitdown[pptx,docx,xlsx,xls,pdf,outlook,az-doc-intel,az-content-understanding,audio-transcription]==0.1.6",
]

[project.optional-dependencies]
build = [
  "build",
  "pyinstaller",
]
test = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/BrandonDry/Omnivert"
Repository = "https://github.com/BrandonDry/Omnivert"
Issues = "https://github.com/BrandonDry/Omnivert/issues"
Changelog = "https://github.com/BrandonDry/Omnivert/blob/main/CHANGELOG.md"

[project.scripts]
omnivert = "omnivert.launcher:main"

[tool.setuptools.dynamic]
version = {attr = "omnivert.app_version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omnivert = ["web/**"]
